--- a/templates/AddTable.html
+++ b/templates/AddTable.html
@@ -44,73 +44,80 @@
     <title>เพิ่มที่นั่ง</title>
 </head>
 <body>
-    <div class="col ">
-        {% block content %}
-        <!-- /#sidebar-wrapper -->
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <p style="text-align: center; margin: auto">เพิ่มโต้ะ</p>
-                </div>
-            </nav>
-            <div class="row">
-                <form action="AddTable" method="post">
-                    <div class="col"></div>
-                    <div class="col-5">
-                        <!-- Input Group with Multiple Filled Inputs -->
-                        <div class="input-group pmd-input-group-filled" style="margin-top:100px;">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="filled-mutliple-ig-label">เลขที่นั่ง</span>
+    {% block content %}
+    
+        <div class="col ">
+            <form action="AddTable" method="post">
+                <!-- /#sidebar-wrapper -->
+                <!-- Page Content -->
+                <div id="page-content-wrapper">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <p style="text-align: center; margin: auto;" class="text-white">เพิ่มโต้ะ</p>
+                        </div>
+                    </nav>
+                    <div class="row">
+
+                        <div class="col"></div>
+
+                        <div class="col-5">
+                            <!-- Input Group with Multiple Filled Inputs -->
+                            <div class="input-group pmd-input-group-filled" style="margin-top:100px;">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="filled-mutliple-ig-label">เลขที่นั่ง</span>
+                                </div>
+                                <div class="pmd-textfield pmd-textfield-filled">
+                                    {% csrf_token %}
+                                    <input type="text" class="form-control" aria-label="NumSit" name="NumberofTable" aria-describedby="filled-mutliple-ig-label">
+                                </div>
+
                             </div>
-                            <div class="pmd-textfield pmd-textfield-filled">
-                                {% csrf_token %}
-                                <input type="text" class="form-control" aria-label="NumSit" name="NumberofTable" aria-describedby="filled-mutliple-ig-label">
+
+                            <!-- Input Group with Multiple Filled Inputs -->
+                            <div class="input-group pmd-input-group-filled" style="margin-top:20px;">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="filled-mutliple-ig-label">จำนวนคนนั่ง</span>
+                                </div>
+                                <div class="pmd-textfield pmd-textfield-filled">
+                                    {% csrf_token %}
+                                    <input type="text" class="form-control" aria-label="NumWhosit" name="QuantityofTable" aria-describedby="filled-mutliple-ig-label">
+                                </div>
+
                             </div>
 
                         </div>
+                        <div class="col"></div>
 
-                        <!-- Input Group with Multiple Filled Inputs -->
-                        <div class="input-group pmd-input-group-filled" style="margin-top:20px;">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="filled-mutliple-ig-label">จำนวนคนนั่ง</span>
-                            </div>
-                            <div class="pmd-textfield pmd-textfield-filled">
-                                {% csrf_token %}
-                                <input type="text" class="form-control" aria-label="NumWhosit" name="QuantityofTable" aria-describedby="filled-mutliple-ig-label">
-                            </div>
-
-                        </div>
                     </div>
-                    <div class="col"></div>
-                </form>
-            </div>
 
+                    <center><input type="submit" class="btn btn-default bg-dark" style="color: white;margin-right:10px" value="บันทึกข้อมูล"></center>
 
-            <center><input type="submit" data-dismiss="modal" class="btn btn-default bg-dark" style="color: white;margin-right:10px" value="บันทึกข้อมูล" onclick="alert()"></center>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-                    crossorigin="anonymous"></script>
-            <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-            <script src="//cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
-            <script>
-                function alert() {
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+                            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+                            crossorigin="anonymous"></script>
+                    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+                    <script src="//cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
+                    <script>
+                        function alert() {
 
-                    Swal.fire({
-                        title: 'ยืนยันการทำรายการ',
+                            Swal.fire({
+                                title: 'ยืนยันการทำรายการ',
 
-                        icon: 'warning',
-                        showCancelButton: true,
-                        cancelButtonColor: '#d33',
-                        confirmButtonColor: '#3085d6',
-                        cancelButtonText: 'ยกเลิก',
-                        confirmButtonText: 'ยืนยัน'
+                                icon: 'warning',
+                                showCancelButton: true,
+                                cancelButtonColor: '#d33',
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonText: 'ยกเลิก',
+                                confirmButtonText: 'ยืนยัน'
 
-                    })
-                }
-            </script>
+                            })
+                        }
+                    </script>
+                </div>
+            </form>
         </div>
-    </div>
+
+
     {% endblock %}
 </body>
 </html>
