--- a/templates/BillSetting.html
+++ b/templates/BillSetting.html
@@ -50,14 +50,14 @@
         <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <p style="text-align: center; margin: auto;" class="text-white">ตั้งค่าใบเสร็จ</p>
+                    <p style="text-align: center; margin: auto">ตั้งค่าใบเสร็จ</p>
                 </div>
             </nav>
             
             <form action="BillSetting" method="post">
-                <div class="container" style="margin-top:10px">
+                <div class="col" style="margin-top:10px">
                     <div class="mb-3 row">
                         <label for="staticEmail" class="col-sm-2 col-form-label">ชื่อร้าน <a class="text-danger">*</a></label>
                         <div class="col-sm-10">
