--- a/templates/addFood.html
+++ b/templates/addFood.html
@@ -78,7 +78,7 @@
                                 <div class="card text-white bg-dark mb-3 card-mine" style="width: 13rem; height: 9rem; border-radius: 30px">
                                     <div style="text-align: center" class="card-body"></div>
                                     <div style="text-align: center" class="card-footer">
-                                        {{post.Ftype}}
+                                        {{post.type_food}}
                                     </div>
                                 </div>
                             </button>
